--- a/style.css
+++ b/style.css
@@ -1,20 +1,28 @@
 /* Tag selector to select the 'body' element */
 body {
-  /* Your code here! */
+  background-color:  #00b3e6;
 }
 
-/* Tag selector to select all 'div' elements. We only have one 'div' in our HTML */
+/* Tag selector to select all 'div' elements. We only have one 'div' in our HTML */ 
 div {
-  /* Your code here! */
+  /* Your code here! */ width:700px;
+  margin:auto;
+  background: white;
+  padding: 30px;
+}
+
+.div{
+  front-family:Helvetica Neue;
 }
 
 /* ID selector to select the element with id 'main-header' */
 #main-header {
   /* Your code here! */
-  color:red;
+  front-size: 22px;
 }
 
 /* Class selector to select elements containing the class 'perspective-questions' */
 .perspective-questions {
-  /* Your code here! */
+  /* Your code here! */ front-style: italic;
+  front-family: Helvetica Neue;
 }
