--- a/style.css
+++ b/style.css
@@ -8,21 +8,18 @@ div {
   /* Your code here! */ width:700px;
   margin:auto;
   background: white;
+  font-family: Helvetica Neue;
   padding: 30px;
-}
-
-.div{
-  front-family:Helvetica Neue;
 }
 
 /* ID selector to select the element with id 'main-header' */
 #main-header {
   /* Your code here! */
-  front-size: 22px;
+  font-size: 22px;
 }
 
 /* Class selector to select elements containing the class 'perspective-questions' */
 .perspective-questions {
-  /* Your code here! */ front-style: italic;
-  front-family: Helvetica Neue;
+  /* Your code here! */ font-style: italic;
+  
 }
